popup text and style

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <br>
                     <span class="lato-bold corpus-content">Tu fais désormais partie du peuple des Insaïens. À ce titre, tu te dois de respecter les codes ancestraux transmis de promo en promo, du Parthénon de la place Saint Pierre jusqu’aux fjords numériques de la Salle TP 12.</span>
                     <br>
-                    <span class="lato-bold corpus-content">Ta blouse rituelle devra être teinte aux couleurs de ton clan civilisé : $cookie . L’artisanat et la créativité seront les clés de ton honneur et de ta gloire !</span>
+                    <span class="lato-bold corpus-content">Ta blouse rituelle devra être teinte aux couleurs de ton clan civilisé. L’artisanat et la créativité seront les clés de ton honneur et de ta gloire !</span>
                     <br>
                     <span class="lato-bold corpus-content">En cette glorieuse année 2025, tu as choisi de rejoindre les rangs d’une grande lignée : celle des bâtisseurs de savoir et des guerrier·ère·s du tissu, à l'image de tes aînés.</span>  
                     <br>
