--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
             <div id="team" class="team-border"><img id="team-logo" class="team-logo-Dsize"/></div>
             <div id="full-screen"><img id="fs-img" src="./medias/fullscreen.svg"/></div>
             <div id="map" onclick="window.open('./mapinsa/index.html', '_blank')"><img id="map-img" src="./medias/map.svg"/></div>
+            <span id="credit-main">Crédits</span>
         </div>
     </div>
 
@@ -115,6 +116,9 @@
                     <img id="planning-img" src="./medias/planning.jpeg">
                 </div>
             </div>
+            <footer id="info-bot">
+                <span id="credit-info">Crédits</span>
+            </footer>
         </div>
         <div id="info-blouse">
             <img id="back-arrow-2" src="./medias/back.svg"/>
@@ -172,8 +176,10 @@
                     <img id="spec-img" class="blouse-img" src="./medias/blouse1.jpg"/>
                     <img class="blouse-img" src="./medias/blouse2.jpg"/>
                 </div>
-
             </div>
+            <footer id="info-bot">
+                <span id="credit-info-2">Crédits</span>
+            </footer>
         </div>
         <div id="info-guide-ppa">
             <img id="back-arrow-3" src="./medias/back.svg"/>
@@ -215,6 +221,9 @@
                     <span class="lato-bold corpus-content">C’est aussi grâce à Sumeria que tu pourras réserver ta place pour les grands événements de la vie étudiante : Gala, I5, ou encore les spectacles des Enfoiros (et on compte sur ta présence pour faire honneur à ta civilisation !). Comme pour Izly, tu peux générer un QR code ou simplement payer en entrant le numéro de téléphone de ton camarade.</span>
                 </div>
             </div>
+            <footer id="info-bot">
+                <span id="credit-info-3">Crédits</span>
+            </footer>
         </div>
         <div id="info-prevention">
             <img id="back-arrow-4" src="./medias/back.svg"/>
@@ -239,6 +248,9 @@
                     </span>
                 </div>
             </div>
+            <footer id="info-bot">
+                <span id="credit-info-4">Crédits</span>
+            </footer>
         </div>
     </div>
 
