--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <img id="planning-img" src="./medias/planning.jpeg">
                 </div>
             </div>
-            <footer id="info-bot">
+            <footer id="bottom">
                 <span id="credit-info">Crédits</span>
             </footer>
         </div>
@@ -177,7 +177,7 @@
                     <img class="blouse-img" src="./medias/blouse2.jpg"/>
                 </div>
             </div>
-            <footer id="info-bot">
+            <footer id="bottom">
                 <span id="credit-info-2">Crédits</span>
             </footer>
         </div>
@@ -221,7 +221,7 @@
                     <span class="lato-bold corpus-content">C’est aussi grâce à Sumeria que tu pourras réserver ta place pour les grands événements de la vie étudiante : Gala, I5, ou encore les spectacles des Enfoiros (et on compte sur ta présence pour faire honneur à ta civilisation !). Comme pour Izly, tu peux générer un QR code ou simplement payer en entrant le numéro de téléphone de ton camarade.</span>
                 </div>
             </div>
-            <footer id="info-bot">
+            <footer id="bottom">
                 <span id="credit-info-3">Crédits</span>
             </footer>
         </div>
@@ -248,7 +248,7 @@
                     </span>
                 </div>
             </div>
-            <footer id="info-bot">
+            <footer id="bottom">
                 <span id="credit-info-4">Crédits</span>
             </footer>
         </div>
