--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <span class="title-content chokokutai-regular">Au planning ...</span>
                 </div>
                 <div id="plan-img-container">
-                    <img id="planning-img" src="./medias/planning.jpeg">
+                    <img id="planning-img" src="./medias/planning.png">
                 </div>
                 <footer id="bottom">
                     <span id="credit-info">Crédits</span>
