--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
             <div id="info-mid">
                 <div id="corpus-title">
-                    <span class="title-content chokokutai-regular">Au planning ...</span>
+                    <span class="title-content chokokutai-regular">Tout est prêt !</span>
                 </div>
                 <div id="plan-img-container">
                     <img id="planning-img" src="./medias/planning.png">
