--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                     <span class="title-content chokokutai-regular">Tout est prêt !</span>
                 </div>
                 <div id="plan-img-container">
-                    <img id="planning-img" src="./medias/planning.png">
+                    <img class="img-portrait" id="planning-img" src="./medias/planning-vert.png">
+                    <img class="img-landscape" id="planning-img" src="./medias/planning-hori.png">
                 </div>
                 <footer id="bottom">
                     <span id="credit-info">Crédits</span>
