--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <img class="blouse-img" src="./medias/blouse2.jpg"/>
                 </div>
                 <footer id="bottom">
-                    <span id="credit-info-2">Crédits</span>
+                    <span id="credit-info-2" class="chokokutai-regular">Crédits</span>
                 </footer>
             </div>
         </div>
