font + credits correction

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Chokokutai&family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Chokokutai&family=Gloria+Hallelujah&family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <script src="./js/scripts.js" type="module" defer></script>
 
     <style>
@@ -143,42 +143,42 @@
                     <span class="title-content chokokutai-regular">C'est quoi la blouse ?</span>
                 </div>
                 <div id="corpus">
-                    <span class="lato-bold corpus-content">Vaillant·e élu·e,</span>
+                    <span class="gloria-hallelujah-regular corpus-content">Vaillant·e élu·e,</span>
                     <br>
-                    <span class="lato-bold corpus-content">Tu fais désormais partie du peuple des Insaïens. À ce titre, tu te dois de respecter les codes ancestraux transmis de promo en promo, du Parthénon de la place Saint Pierre jusqu’aux fjords numériques de la Salle TP 12.</span>
+                    <span class="gloria-hallelujah-regular corpus-content">Tu fais désormais partie du peuple des Insaïens. À ce titre, tu te dois de respecter les codes ancestraux transmis de promo en promo, du Parthénon de la place Saint Pierre jusqu’aux fjords numériques de la Salle TP 12.</span>
                     <br>
-                    <span class="lato-bold corpus-content">Ta blouse rituelle devra être teinte aux couleurs de ton clan civilisé. L’artisanat et la créativité seront les clés de ton honneur et de ta gloire !</span>
+                    <span class="gloria-hallelujah-regular corpus-content">Ta blouse rituelle devra être teinte aux couleurs de ton clan civilisé. L’artisanat et la créativité seront les clés de ton honneur et de ta gloire !</span>
                     <br>
-                    <span class="lato-bold corpus-content">En cette glorieuse année 2025, tu as choisi de rejoindre les rangs d’une grande lignée : celle des bâtisseurs de savoir et des guerrier·ère·s du tissu, à l'image de tes aînés.</span>  
+                    <span class="gloria-hallelujah-regular corpus-content">En cette glorieuse année 2025, tu as choisi de rejoindre les rangs d’une grande lignée : celle des bâtisseurs de savoir et des guerrier·ère·s du tissu, à l'image de tes aînés.</span>  
                     <br>
-                    <span class="lato-bold corpus-content">Durant cette semaine épique des civilisations, ta blouse sera ton armure, ton étendard, ton manuscrit sacré ! Elle te sera précieuse non seulement lors des rituels de TP, mais elle révèlera au monde entier le·la fier·e Ambassadeur·drice de ta civilisation que tu es (et que tu porteras avec fierté du matin jusqu’à la tombée du soleil).</span>
+                    <span class="gloria-hallelujah-regular corpus-content">Durant cette semaine épique des civilisations, ta blouse sera ton armure, ton étendard, ton manuscrit sacré ! Elle te sera précieuse non seulement lors des rituels de TP, mais elle révèlera au monde entier le·la fier·e Ambassadeur·drice de ta civilisation que tu es (et que tu porteras avec fierté du matin jusqu’à la tombée du soleil).</span>
                     <br><br>
                     <span class="title-content chokokutai-regular">Les Tables de Loi de la Blouse</span>
                     <br><br>
-                    <span class="lato-bold-italic corpus-content">• Fil et aiguille, seuls outils légitimes seront.</span>
+                    <span class="gloria-hallelujah-regular corpus-content">• Fil et aiguille, seuls outils légitimes seront.</span>
                     <br>
-                    <span class="lato-bold-italic corpus-content">• Par ta seule main cette tâche tu accompliras — ni mère ni aïeule tu n’invoqueras. Le rite est personnel. Courage, jeune initié·e !</span>
+                    <span class="gloria-hallelujah-regular corpus-content">• Par ta seule main cette tâche tu accompliras — ni mère ni aïeule tu n’invoqueras. Le rite est personnel. Courage, jeune initié·e !</span>
                     <br>
-                    <span class="lato-bold-italic corpus-content">• Marqueurs et feutres, tabous ils sont (ne pas les utiliser). Ces instruments appartiennent aux Érudits de l'Évaluation (tes ainés), qui béniront ou maudiront ta création selon les coutumes.</span>
+                    <span class="gloria-hallelujah-regular corpus-content">• Marqueurs et feutres, tabous ils sont (ne pas les utiliser). Ces instruments appartiennent aux Érudits de l'Évaluation (tes ainés), qui béniront ou maudiront ta création selon les coutumes.</span>
                     <br>
-                    <span class="lato-bold-italic corpus-content">• Ta blouse devra être une œuvre d’art unique, inspirée des mythes et symboles de ta civilisation. Recopie n’est pas honneur : imagine, réinvente, crée.</span>
+                    <span class="gloria-hallelujah-regular corpus-content">• Ta blouse devra être une œuvre d’art unique, inspirée des mythes et symboles de ta civilisation. Recopie n’est pas honneur : imagine, réinvente, crée.</span>
                     <br>
-                    <span class="lato-bold-italic corpus-content">• Sur le devant, doivent paraître ton prénom, le blason de ton peuple (ou de ta ville) et son nom antique. Au dos, grave ton surnom avec grandeur et “INSA 63” en lettres dignes d’un monument.</span>
+                    <span class="gloria-hallelujah-regular corpus-content">• Sur le devant, doivent paraître ton prénom, le blason de ton peuple (ou de ta ville) et son nom antique. Au dos, grave ton surnom avec grandeur et “INSA 63” en lettres dignes d’un monument.</span>
                     <br>
-                    <span class="lato-bold-italic corpus-content">• Manches, poches, recoins : rien ne doit rester vierge. Broderies, motifs tribaux, armes mythiques, dieux, dragons ou plumes sacrées : tout ce qui évoque ta civilisation est bienvenu. L’humour, lui, est récompensé par les Dieux et les Anciens.</span>
+                    <span class="gloria-hallelujah-regular corpus-content">• Manches, poches, recoins : rien ne doit rester vierge. Broderies, motifs tribaux, armes mythiques, dieux, dragons ou plumes sacrées : tout ce qui évoque ta civilisation est bienvenu. L’humour, lui, est récompensé par les Dieux et les Anciens.</span>
                     <br><br>
                     <span class="title-content chokokutai-regular">Gloire à celles et ceux qui créent !</span>
                     <br><br>
-                    <span class="lato-bold corpus-content">Un exemple de chef-d’œuvre t’attend si tu veux t’inspirer... mais souviens-toi : les héros ne copient pas, ils laissent leur légende s’écrire à la pointe de l’aiguille.</span>
+                    <span class="gloria-hallelujah-regular corpus-content">Un exemple de chef-d’œuvre t’attend si tu veux t’inspirer... mais souviens-toi : les héros ne copient pas, ils laissent leur légende s’écrire à la pointe de l’aiguille.</span>
                     <br>
-                    <span class="lato-bold corpus-content">Prépare-toi, fier·e Insaïen·ne. Que ta blouse raconte ton épopée !</span>
+                    <span class="gloria-hallelujah-regular corpus-content">Prépare-toi, fier·e Insaïen·ne. Que ta blouse raconte ton épopée !</span>
                 </div>
                 <div id="blouse-img-container">
                     <img class="blouse-img" src="./medias/exemple.png"/>
                     <img id="spec-img" class="blouse-img" src="./medias/blouse1.jpg"/>
-                    <img class="blouse-img" src="./medias/blouse2.jpg"/>
+                    <img id="last-bls-img" class="blouse-img" src="./medias/blouse2.jpg"/>
                 </div>
-                <footer id="bottom">
+                <footer id="bottom" class="spaced">
                     <span id="credit-info-2" class="chokokutai-regular">Crédits</span>
                 </footer>
             </div>
