animation with lag

--- a/index.html
+++ b/index.html
@@ -204,23 +204,23 @@
                     <span class="title-content chokokutai-regular">IZLY</span>
                     <br>
                     <br>
-                    <span class="lato-bold corpus-content">Tous les midis, après une longue et valeureuse conquête à travers les civilisations antiques — quelle que soit ta contrée d’origine — tu pourras reprendre des forces au RU (Restaurant Universitaire) de l’INSA ! Pour cela, il te faudra Izly : c’est l’application du Crous, cet immense royaume qui régit une bonne partie de nos vies étudiantes, comme nos repas et nos logements.</span>
+                    <span class="gloria-hallelujah-regular corpus-content">Tous les midis, après une longue et valeureuse conquête à travers les civilisations antiques — quelle que soit ta contrée d’origine — tu pourras reprendre des forces au RU (Restaurant Universitaire) de l’INSA ! Pour cela, il te faudra Izly : c’est l’application du Crous, cet immense royaume qui régit une bonne partie de nos vies étudiantes, comme nos repas et nos logements.</span>
                     <br>
-                    <span class="lato-bold corpus-content">Il te suffira de charger ton compte Izly avec quelques « pièces d’or » virtuelles et de régler à la borne de paiement grâce au QR code généré par l’application. À ce propos, jeune conquérant·e, sache qu’un repas est composé d’un plat principal et de deux « périphériques » (un périphérique = une entrée ou un dessert). Bien sûr, tu peux te permettre un banquet plus généreux… mais il te faudra débourser davantage.</span>
+                    <span class="gloria-hallelujah-regular corpus-content">Il te suffira de charger ton compte Izly avec quelques « pièces d’or » virtuelles et de régler à la borne de paiement grâce au QR code généré par l’application. À ce propos, jeune conquérant·e, sache qu’un repas est composé d’un plat principal et de deux « périphériques » (un périphérique = une entrée ou un dessert). Bien sûr, tu peux te permettre un banquet plus généreux… mais il te faudra débourser davantage.</span>
                     <br>
-                    <span class="lato-bold corpus-content">En réalité, Izly te permet de payer tout ce que propose le Crous côté restauration : RU, food truck ou cafèt’. Et pour les partisans du concret, sache qu’Izly est aussi liée à ta carte étudiante : tu pourras donc payer directement avec celle-ci (plutôt digne d’un chef de clan, non ?).</span>
+                    <span class="gloria-hallelujah-regular corpus-content">En réalité, Izly te permet de payer tout ce que propose le Crous côté restauration : RU, food truck ou cafèt’. Et pour les partisans du concret, sache qu’Izly est aussi liée à ta carte étudiante : tu pourras donc payer directement avec celle-ci (plutôt digne d’un chef de clan, non ?).</span>
                     <br>
-                    <span class="lato-bold corpus-content">Petit rappel pour prouver qu’Izly est vraiment indispensable : même ton café aux distributeurs se règle avec ta carte étudiante (connectée à Izly, tu l’auras compris).</span>
+                    <span class="gloria-hallelujah-regular corpus-content">Petit rappel pour prouver qu’Izly est vraiment indispensable : même ton café aux distributeurs se règle avec ta carte étudiante (connectée à Izly, tu l’auras compris).</span>
                     <br>
                     <br>
                     <span class="title-content chokokutai-regular">SUMERIA</span>
                     <br>
                     <br>
-                    <span class="lato-bold corpus-content">Sumeria, c’est l’esprit communautaire des premières grandes cités, la solidarité et la convivialité entre étudiants. Avec Sumeria, tu pourras rendre la monnaie de ta dette en un clin d’œil après avoir partagé un festin ou une tournée au foyer (sauf si ta banque décide de jouer les scribes tatillons).</span>
+                    <span class="gloria-hallelujah-regular corpus-content">Sumeria, c’est l’esprit communautaire des premières grandes cités, la solidarité et la convivialité entre étudiants. Avec Sumeria, tu pourras rendre la monnaie de ta dette en un clin d’œil après avoir partagé un festin ou une tournée au foyer (sauf si ta banque décide de jouer les scribes tatillons).</span>
                     <br>
-                    <span class="lato-bold corpus-content">À l’INSA, on est dans l’air du temps : finis les sacs de pièces d’or, tout se fait désormais virtuellement. Du coup, Sumeria te sera bien utile pour payer ton panini ou ton thé au foyer le midi (si tu préfères ça au repas du Crous). Attention : le foyer dépend de l’Amicale et non du Crous… donc pas d’Izly ici, si tu as bien suivi.</span>
+                    <span class="gloria-hallelujah-regular corpus-content">À l’INSA, on est dans l’air du temps : finis les sacs de pièces d’or, tout se fait désormais virtuellement. Du coup, Sumeria te sera bien utile pour payer ton panini ou ton thé au foyer le midi (si tu préfères ça au repas du Crous). Attention : le foyer dépend de l’Amicale et non du Crous… donc pas d’Izly ici, si tu as bien suivi.</span>
                     <br>
-                    <span class="lato-bold corpus-content">C’est aussi grâce à Sumeria que tu pourras réserver ta place pour les grands événements de la vie étudiante : Gala, I5, ou encore les spectacles des Enfoiros (et on compte sur ta présence pour faire honneur à ta civilisation !). Comme pour Izly, tu peux générer un QR code ou simplement payer en entrant le numéro de téléphone de ton camarade.</span>
+                    <span class="gloria-hallelujah-regular corpus-content">C’est aussi grâce à Sumeria que tu pourras réserver ta place pour les grands événements de la vie étudiante : Gala, I5, ou encore les spectacles des Enfoiros (et on compte sur ta présence pour faire honneur à ta civilisation !). Comme pour Izly, tu peux générer un QR code ou simplement payer en entrant le numéro de téléphone de ton camarade.</span>
                 </div>
                 <footer id="bottom">
                     <span id="credit-info-3">Crédits</span>
@@ -246,7 +246,7 @@
                     <span class="title-content chokokutai-regular">Un manuscrit de la Com'Prev :</span>
                 </div>
                 <div id="corpus">
-                    <span class="lato-bold corpus-content">
+                    <span class="gloria-hallelujah-regular corpus-content">
                         "Bien le bonjour jeune PPA ! Nous sommes la Com’Prev, toujours présents pour soigner la moindre de tes blessures et pour assurer ta sécurité dans l’arène et en dehors, à tout moment. Que ce soit pour une cheville foulée, un coude écorché, des inquiétudes, un problème à signaler, tu peux (et dois) venir nous voir pour récupérer toute ta vigueur et passer une super semaine ! Tous les membres de la Com’Prev porteront un T-Shirt rouge en signe de reconnaissance. Si tu es victime ou témoin d’agression ou de Violences Sexistes et Sexuelles (VSS), nous t’encourageons à venir nous en parler pendant la semaine. Nous œuvrerons durant toute la semaine pour que tu puisses t’éclater sans danger et garder de super souvenirs. Hâte de te voir enfin rentrer dans l’arène des civilisations antiques !"
                     </span>
                 </div>
