--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div id="team" class="team-border"><img id="team-logo" class="team-logo-Dsize"/></div>
             <div id="full-screen"><img id="fs-img" src="./medias/fullscreen.svg"/></div>
             <div id="map" onclick="window.open('./mapinsa/index.html', '_blank')"><img id="map-img" src="./medias/map.svg"/></div>
-            <span id="credit-main">Crédits</span>
+            <span class="chokokutai-regular" id="credit-main">Crédits</span>
         </div>
     </div>
 
@@ -117,7 +117,7 @@
                     <img class="img-landscape" id="planning-img" src="./medias/planning-hori.png">
                 </div>
                 <footer id="bottom">
-                    <span id="credit-info">Crédits</span>
+                    <span class="chokokutai-regular" id="credit-info">Crédits</span>
                 </footer>
             </div>
             
@@ -147,11 +147,15 @@
                     <br>
                     <span class="gloria-hallelujah-regular corpus-content">Tu fais désormais partie du peuple des Insaïens. À ce titre, tu te dois de respecter les codes ancestraux transmis de promo en promo, du Parthénon de la place Saint Pierre jusqu’aux fjords numériques de la Salle TP 12.</span>
                     <br>
-                    <span class="gloria-hallelujah-regular corpus-content">Ta blouse rituelle devra être teinte aux couleurs de ton clan civilisé. L’artisanat et la créativité seront les clés de ton honneur et de ta gloire !</span>
+                    <span class="gloria-hallelujah-regular corpus-content">Le premier d’entre eux et l’un des plus sacrés : ta blouse rituelle !</span>
                     <br>
-                    <span class="gloria-hallelujah-regular corpus-content">En cette glorieuse année 2025, tu as choisi de rejoindre les rangs d’une grande lignée : celle des bâtisseurs de savoir et des guerrier·ère·s du tissu, à l'image de tes aînés.</span>  
+                    <span class="gloria-hallelujah-regular corpus-content">En cette glorieuse année 2025, tu as choisi de rejoindre les rangs d’une grande lignée : celle des bâtisseurs de savoir et des guerrier·ère·s du tissu, à l’image de tes aînés. L’artisanat et la créativité seront les clés de ton honneur et de ta gloire !</span>  
                     <br>
-                    <span class="gloria-hallelujah-regular corpus-content">Durant cette semaine épique des civilisations, ta blouse sera ton armure, ton étendard, ton manuscrit sacré ! Elle te sera précieuse non seulement lors des rituels de TP, mais elle révèlera au monde entier le·la fier·e Ambassadeur·drice de ta civilisation que tu es (et que tu porteras avec fierté du matin jusqu’à la tombée du soleil).</span>
+                    <span class="gloria-hallelujah-regular corpus-content">Durant cette semaine épique des civilisations, ta blouse sera ton armure, ton étendard, ton manuscrit sacré ! Elle te sera précieuse non seulement lors des rituels de TP, mais surtout, elle révèlera au monde entier de quelle civilisation tu es le/la fier-e ambassadeur.rice (et tu la porteras avec fierté du matin jusqu’à la tombée du soleil).</span>
+                    <br><br>
+                    <span class="gloria-hallelujah-regular corpus-content">Tu proclameras donc ton appartenance à la face du monde insaïen entier en teignant ta blouse rituelle aux couleurs de ton clan civilisé. Ta blouse rituelle devra être teinte aux couleurs de ton clan civilisé (celle qui apparait au derrière de ces divines paroles).</span>
+                    <br><br>
+                    <span class="gloria-hallelujah-regular corpus-content">La confection de la Blouse, objet emblématique, se doit de respecter un certain nombre de règles.</span>
                     <br><br>
                     <span class="title-content chokokutai-regular">Les Tables de Loi de la Blouse</span>
                     <br><br>
@@ -160,12 +164,8 @@
                     <span class="gloria-hallelujah-regular corpus-content">• Par ta seule main cette tâche tu accompliras — ni mère ni aïeule tu n’invoqueras. Le rite est personnel. Courage, jeune initié·e !</span>
                     <br>
                     <span class="gloria-hallelujah-regular corpus-content">• Marqueurs et feutres, tabous ils sont (ne pas les utiliser). Ces instruments appartiennent aux Érudits de l'Évaluation (tes ainés), qui béniront ou maudiront ta création selon les coutumes.</span>
-                    <br>
-                    <span class="gloria-hallelujah-regular corpus-content">• Ta blouse devra être une œuvre d’art unique, inspirée des mythes et symboles de ta civilisation. Recopie n’est pas honneur : imagine, réinvente, crée.</span>
-                    <br>
-                    <span class="gloria-hallelujah-regular corpus-content">• Sur le devant, doivent paraître ton prénom, le blason de ton peuple (ou de ta ville) et son nom antique. Au dos, grave ton surnom avec grandeur et “INSA 63” en lettres dignes d’un monument.</span>
-                    <br>
-                    <span class="gloria-hallelujah-regular corpus-content">• Manches, poches, recoins : rien ne doit rester vierge. Broderies, motifs tribaux, armes mythiques, dieux, dragons ou plumes sacrées : tout ce qui évoque ta civilisation est bienvenu. L’humour, lui, est récompensé par les Dieux et les Anciens.</span>
+                    <br><br>
+                    <span class="gloria-hallelujah-regular corpus-content">Ta blouse devra être une œuvre d’art unique, inspirée des mythes et symboles de ta civilisation. Recopier n’est pas honneur : imagine, réinvente, crée.</span>
                     <br><br>
                     <span class="title-content chokokutai-regular">Gloire à celles et ceux qui créent !</span>
                     <br><br>
@@ -223,7 +223,7 @@
                     <span class="gloria-hallelujah-regular corpus-content">C’est aussi grâce à Sumeria que tu pourras réserver ta place pour les grands événements de la vie étudiante : Gala, I5, ou encore les spectacles des Enfoiros (et on compte sur ta présence pour faire honneur à ta civilisation !). Comme pour Izly, tu peux générer un QR code ou simplement payer en entrant le numéro de téléphone de ton camarade.</span>
                 </div>
                 <footer id="bottom">
-                    <span id="credit-info-3">Crédits</span>
+                    <span class="chokokutai-regular" id="credit-info-3">Crédits</span>
                 </footer>
             </div>
 
@@ -251,7 +251,7 @@
                     </span>
                 </div>
                 <footer id="bottom">
-                    <span id="credit-info-4">Crédits</span>
+                    <span class="chokokutai-regular" id="credit-info-4">Crédits</span>
                 </footer>
             </div>  
         </div>
