--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div id="scene-container">
             <div id="team" class="team-border"><img id="team-logo" class="team-logo-Dsize"/></div>
             <div id="full-screen"><img id="fs-img" src="./medias/fullscreen.svg"/></div>
-            <div id="map" onclick="window.open('./mapinsa/index.html', '_blank')"><img id="map-img" src="./medias/map.svg"/></div>
+            <div id="map" onclick="window.open('./mapinsa/index.html', '_blank')" onmouseenter="document.getElementById('map-img').src = './medias/maphover.svg'" onmouseleave="document.getElementById('map-img').src = './medias/map.svg'"><img id="map-img" src="./medias/map.svg"/></div>
             <span class="chokokutai-regular" id="credit-main">Crédits</span>
         </div>
     </div>
