--- a/index.html
+++ b/index.html
@@ -221,6 +221,17 @@
                     <span class="gloria-hallelujah-regular corpus-content">À l’INSA, on est dans l’air du temps : finis les sacs de pièces d’or, tout se fait désormais virtuellement. Du coup, Sumeria te sera bien utile pour payer ton panini ou ton thé au foyer le midi (si tu préfères ça au repas du Crous). Attention : le foyer dépend de l’Amicale et non du Crous… donc pas d’Izly ici, si tu as bien suivi.</span>
                     <br>
                     <span class="gloria-hallelujah-regular corpus-content">C’est aussi grâce à Sumeria que tu pourras réserver ta place pour les grands événements de la vie étudiante : Gala, I5, ou encore les spectacles des Enfoiros (et on compte sur ta présence pour faire honneur à ta civilisation !). Comme pour Izly, tu peux générer un QR code ou simplement payer en entrant le numéro de téléphone de ton camarade.</span>
+                    <br>
+                    <br>
+                    <span class="title-content chokokutai-regular">CAMPUS</span>
+                    <br>
+                    <br>
+                    <span class="gloria-hallelujah-regular corpus-content">Campus c’est LE must-have quand tu es à l’INSA (et je n’exagère pas du tout). En gros, c’est un peu l’application que tu vas ouvrir tous les jours pour regarder les informations de l’école car, avouons-le, flemme d’aller à l’Agora toutes les deux secondes pour être au courant des news de l’INSA.</span>
+                    <br>
+                    <span class="gloria-hallelujah-regular corpus-content">Cette application, gérée par l’amicale des élèves de l’INSA, te permettra de voir ton emploi du temps tous les jours, et même ceux de tes amis ou de ton crush que tu pourras mettre en favori (pratique pour le ou la croiser par pur hasard (: ). C’est également sur Campus que tu verras quels bassins (machines à laver) sont disponibles au lavoir de l’INSA (devant la mystique R2) pour laver tes toges et autres vêtements, sans oublier tes draps et tes serviettes (on te voit, oui les draps de lit ça se lave régulièrement)</span>
+                    <br>
+                    <span class="gloria-hallelujah-regular corpus-content">Tu pourras également, sur cette application, accéder à ta boite aux lettres électronique, regarder les évènements qui ont lieu sur le campus, et faire plein d’autres choses. Bref, il te faut installer Campus sinon tu n’iras pas bien loin dans l’INSA’rène.</span>
+                
                 </div>
                 <footer id="bottom">
                     <span class="chokokutai-regular" id="credit-info-3">Crédits</span>
@@ -247,7 +258,7 @@
                 </div>
                 <div id="corpus">
                     <span class="gloria-hallelujah-regular corpus-content">
-                        "Bien le bonjour jeune PPA ! Nous sommes la Com’Prev, toujours présents pour soigner la moindre de tes blessures et pour assurer ta sécurité dans l’arène et en dehors, à tout moment. Que ce soit pour une cheville foulée, un coude écorché, des inquiétudes, un problème à signaler, tu peux (et dois) venir nous voir pour récupérer toute ta vigueur et passer une super semaine ! Tous les membres de la Com’Prev porteront un T-Shirt rouge en signe de reconnaissance. Si tu es victime ou témoin d’agression ou de Violences Sexistes et Sexuelles (VSS), nous t’encourageons à venir nous en parler pendant la semaine. Nous œuvrerons durant toute la semaine pour que tu puisses t’éclater sans danger et garder de super souvenirs. Hâte de te voir enfin rentrer dans l’arène des civilisations antiques !"
+                        "Bien le bonjour jeune PPA ! Nous sommes la Com’Prev, toujours présents pour soigner la moindre de tes blessures et pour assurer ta sécurité dans l’arène et en dehors, à tout moment. Que ce soit pour une cheville foulée, un coude écorché, des inquiétudes, un problème à signaler, tu peux (et dois) venir nous voir pour récupérer toute ta vigueur et passer une super semaine ! Tous les membres de la Com’Prev porteront un T-Shirt rouge en signe de reconnaissance. Si tu es victime ou témoin d’agression ou de Violences Sexistes et Sexuelles (VSS), nous t’encourageons à venir nous en parler pendant la semaine. Nous œuvrerons durant toute la semaine pour que tu puisses t’éclater sans danger et garder de super souvenirs. Hâte de te voir enfin rentrer dans l’arène des civilisations antiques !" <br>- Les respos Com'Prev
                     </span>
                 </div>
                 <footer id="bottom">
